--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://huang78:Us3700587@cluster0.8ytwcy8.mongodb.net/test
+MONGODB_URI=mongodb+srv://huang78:Us3700587@cluster0.8ytwcy8.mongodb.net/new
